--- a/index.html
+++ b/index.html
@@ -8,12 +8,52 @@
             background: #2e2e2e; /* Modification de la couleur de fond */
         }
         #canvas {
-            position: absolute;
+            position: fixed;
+            z-index: -1;
+        }
+        #modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
+        }
+        #modal-content {
+            background-color: #000000;
+            margin: 15% auto;
+            padding: 10px;
+            border: 1px solid #888;
+            width: 50%;
+            height: 50%;
+            border-radius: 10px;
+            box-shadow: 10px 10px 5px grey;
+        }
+        #videoPlayer {
+            width: 100%;
+            height: 80%;
+        }
+        #close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <div id="videoList"></div>
+    <div id="modal">
+        <div id="modal-content">
+            <span id="close">×</span>
+            <iframe id="videoPlayer" allowfullscreen></iframe>
+        </div>
+    </div>
     <script>
         var canvas = document.getElementById('canvas');
         var ctx = canvas.getContext('2d');
@@ -87,6 +127,35 @@
             mousePos.x = e.clientX;
             mousePos.y = e.clientY;
         });
+
+        // Charger les vidéos à partir de videos.json
+        fetch('videos.json')
+          .then(response => response.json())
+          .then(videos => {
+            // Générer la liste de vidéos
+            for (var i = 0; i < videos.length; i++) {
+              var video = videos[i];
+              var videoElement = document.createElement('p');
+              videoElement.textContent = video.title;
+              videoElement.style.cursor = 'pointer';
+              videoElement.onclick = createOnClickHandler(video.url);
+
+              var container = document.getElementById('videoList');
+              container.appendChild(videoElement);
+            }
+          });
+
+        function createOnClickHandler(url) {
+          return function() {
+            document.getElementById('videoPlayer').src = url;
+            document.getElementById('modal').style.display = "block";
+          };
+        }
+
+        // Fermer la fenêtre modale lorsque l'utilisateur clique sur (x)
+        document.getElementById('close').onclick = function() {
+          document.getElementById('modal').style.display = "none";
+        }
     </script>
 </body>
 </html>
