--- a/index.html
+++ b/index.html
@@ -152,17 +152,13 @@
           };
         }
 
-// Fermer la fenêtre modale lorsque l'utilisateur clique sur (x)
-document.getElementById('close').onclick = function() {
-  var modalContent = document.getElementById('modal-content');
-  var videoPlayer = document.getElementById('videoPlayer');
-  modalContent.removeChild(videoPlayer); // Supprime l'iframe
-  document.getElementById('modal').style.display = "none";
-}
-
-function createOnClickHandler(url) {
+        function createOnClickHandler(url) {
   return function() {
     var modalContent = document.getElementById('modal-content');
+    var oldVideoPlayer = document.getElementById('videoPlayer');
+    if (oldVideoPlayer) {
+      modalContent.removeChild(oldVideoPlayer); // Supprime l'ancienne iframe
+    }
     var videoPlayer = document.createElement('iframe'); // Crée une nouvelle iframe
     videoPlayer.id = 'videoPlayer';
     videoPlayer.src = url;
@@ -172,6 +168,16 @@ function createOnClickHandler(url) {
     modalContent.appendChild(videoPlayer); // Ajoute l'iframe à la fenêtre modale
     document.getElementById('modal').style.display = "block";
   };
+}
+
+// Fermer la fenêtre modale lorsque l'utilisateur clique sur (x)
+document.getElementById('close').onclick = function() {
+  var modalContent = document.getElementById('modal-content');
+  var videoPlayer = document.getElementById('videoPlayer');
+  if (videoPlayer) {
+    modalContent.removeChild(videoPlayer); // Supprime l'iframe
+  }
+  document.getElementById('modal').style.display = "none";
 }
     </script>
 </body>
