--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             font-weight: bold;
             cursor: pointer;
         }
+        #modal-content {
+  /* your existing styles */
+  overflow: hidden;
+        }
     </style>
 </head>
 <body>
