--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
             cursor: pointer;
         }
         #modal-content {
-  /* your existing styles */
-  overflow: hidden;
-        }
+    overflow: hidden; /* Masque la barre de défilement horizontal */
+}
     </style>
 </head>
 <body>
