--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             height: 50%;
             border-radius: 10px;
             box-shadow: 10px 10px 5px grey;
+            overflow: hidden; /* Ajout de cette ligne */
         }
         #videoPlayer {
             width: 100%;
