--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             padding: 10px;
             border: 1px solid #888;
             width: 50%;
-            height: 50%;
+            height: auto; /* Modification de cette ligne */
+            max-height: 90vh; /* Ajout de cette ligne */
             border-radius: 10px;
             box-shadow: 10px 10px 5px grey;
             overflow: hidden; /* Ajout de cette ligne */
