--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
             margin: 15% auto;
             padding: 10px;
             border: 1px solid #888;
-            width: 50%;
-            height: auto; /* Modification de cette ligne */
-            max-height: 90vh; /* Ajout de cette ligne */
+            width: 70%; /* Modification de cette ligne */
+            height: 70%; /* Modification de cette ligne */
             border-radius: 10px;
             box-shadow: 10px 10px 5px grey;
             overflow: hidden; /* Ajout de cette ligne */
         }
         #videoPlayer {
-            width: 100%;
-            height: 80%;
+            width: 100%; /* Modification de cette ligne */
+            height: 100%; /* Modification de cette ligne */
+            display: block; /* Ajout de cette ligne */
+            margin: auto; /* Ajout de cette ligne */
         }
         #close {
             color: #aaa;
@@ -165,7 +166,7 @@
     videoPlayer.id = 'videoPlayer';
     videoPlayer.src = url;
     videoPlayer.style.width = '100%';
-    videoPlayer.style.height = '80%';
+    videoPlayer.style.height = '100%';
     videoPlayer.allowFullscreen = true;
     modalContent.appendChild(videoPlayer); // Ajoute l'iframe à la fenêtre modale
     document.getElementById('modal').style.display = "block";
