--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         }
         #modal-content {
             background-color: #000000;
-            margin: 15% auto;
+            margin: 25% auto; /* Modification de cette ligne */
             padding: 10px;
             border: 1px solid #888;
-            width: 70%; /* Modification de cette ligne */
-            height: 70%; /* Modification de cette ligne */
+            width: 35%; /* Modification de cette ligne */
+            height: fit-content; /* Modification de cette ligne */
             border-radius: 10px;
             box-shadow: 10px 10px 5px grey;
-            overflow: hidden; /* Ajout de cette ligne */
+            overflow-y: auto; /* Ajout de cette ligne */
         }
         #videoPlayer {
             width: 100%; /* Modification de cette ligne */
