--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
             position: fixed;
             z-index: -1;
         }
-        #searchBar { /* Ajout de ces lignes */
-            position: fixed;
-            right: 10px;
-            top: 10px;
-        }
         #modal {
             display: none;
             position: fixed;
@@ -33,10 +28,11 @@
             padding: 10px;
             border: 1px solid #888;
             width: 50%;
-            height: auto;
+            height: auto; /* Modification de cette ligne */
+            max-height: 90vh; /* Ajout de cette ligne */
             border-radius: 10px;
             box-shadow: 10px 10px 5px grey;
-            overflow: hidden;
+            overflow: hidden; /* Ajout de cette ligne */
         }
         #videoPlayer {
             width: 100%;
@@ -53,7 +49,6 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <input type="text" id="searchBar" placeholder="Rechercher une vidéo..."> <!-- Ajout de cette ligne -->
     <div id="videoList"></div>
     <div id="modal">
         <div id="modal-content">
