--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
             position: fixed;
             z-index: -1;
         }
+        #searchBar { /* Ajout de ces lignes */
+            position: fixed;
+            right: 10px;
+            top: 10px;
+        }
         #modal {
             display: none;
             position: fixed;
@@ -32,7 +37,7 @@
             max-height: 90vh; /* Ajout de cette ligne */
             border-radius: 10px;
             box-shadow: 10px 10px 5px grey;
-            overflow: hidden; /* Ajout de cette ligne */
+            overflow: hidden;
         }
         #videoPlayer {
             width: 100%;
@@ -49,6 +54,7 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <input type="text" id="searchBar" placeholder="Rechercher une vidéo..."> <!-- Ajout de cette ligne -->
     <div id="videoList"></div>
     <div id="modal">
         <div id="modal-content">
