--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
             position: fixed;
             z-index: -1;
         }
-        #searchBar { /* Ajout de ces lignes */
-            position: fixed;
-            right: 10px;
-            top: 10px;
-        }
         #modal {
             display: none;
             position: fixed;
@@ -37,7 +32,7 @@
             max-height: 90vh; /* Ajout de cette ligne */
             border-radius: 10px;
             box-shadow: 10px 10px 5px grey;
-            overflow: hidden;
+            overflow: hidden; /* Ajout de cette ligne */
         }
         #videoPlayer {
             width: 100%;
@@ -54,7 +49,6 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <input type="text" id="searchBar" placeholder="Rechercher une vidéo...">
     <div id="videoList"></div>
     <div id="modal">
         <div id="modal-content">
@@ -147,7 +141,6 @@
               videoElement.textContent = video.title;
               videoElement.style.cursor = 'pointer';
               videoElement.onclick = createOnClickHandler(video.url);
-              videoElement.setAttribute('data-genre', video.genre); // Ajout de cette ligne
 
               var container = document.getElementById('videoList');
               container.appendChild(videoElement);
