--- a/index.html
+++ b/index.html
@@ -149,27 +149,23 @@
           });
 
         function createOnClickHandler(url) {
-          return function() {
-            document.getElementById('videoPlayer').src = url;
-            document.getElementById('modal').style.display = "block";
-          };
-        }
-
-        function createOnClickHandler(url) {
-          return function() {
-            var modalContent = document.getElementById('modal-content');
-            var oldVideoPlayer = document.getElementById('videoPlayer');
-            if (oldVideoPlayer) {
-              modalContent.removeChild(oldVideoPlayer); // Supprime l'ancienne iframe
+          return function(event) {
+            // Vérifie si l'événement de clic a été déclenché par un élément de la liste de vidéos
+            if (event.target.tagName.toLowerCase() === 'p') {
+                var modalContent = document.getElementById('modal-content');
+                var oldVideoPlayer = document.getElementById('videoPlayer');
+                if (oldVideoPlayer) {
+                    modalContent.removeChild(oldVideoPlayer); // Supprime l'ancienne iframe
+                }
+                var videoPlayer = document.createElement('iframe'); // Crée une nouvelle iframe
+                videoPlayer.id = 'videoPlayer';
+                videoPlayer.src = url;
+                videoPlayer.style.width = '100%';
+                videoPlayer.style.height = '80%';
+                videoPlayer.allowFullscreen = true;
+                modalContent.appendChild(videoPlayer); // Ajoute l'iframe à la fenêtre modale
+                document.getElementById('modal').style.display = "block";
             }
-            var videoPlayer = document.createElement('iframe'); // Crée une nouvelle iframe
-            videoPlayer.id = 'videoPlayer';
-            videoPlayer.src = url;
-            videoPlayer.style.width = '100%';
-            videoPlayer.style.height = '80%';
-            videoPlayer.allowFullscreen = true;
-            modalContent.appendChild(videoPlayer); // Ajoute l'iframe à la fenêtre modale
-            document.getElementById('modal').style.display = "block";
           };
         }
 
