--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             font-weight: bold;
             cursor: pointer;
         }
-        /* Ajout de style pour ajuster la largeur des boutons aux contenus */
+        /* Style pour les vidéos */
         #videoList p {
-            display: inline-block;
+            display: block;
             margin: 5px 0;
             cursor: pointer;
         }
