--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             display: block;
             margin: 5px 0;
             cursor: pointer;
+            width: auto; /* Ajustement automatique de la largeur en fonction du texte */
+            overflow: hidden; /* Empêche le débordement du texte */
+            white-space: nowrap; /* Empêche le texte de se diviser sur plusieurs lignes */
+            text-overflow: ellipsis; /* Affiche "..." si le texte est trop long pour être entièrement affiché */
         }
     </style>
 </head>
