--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
 
               var container = document.getElementById('videoList');
               container.appendChild(videoElement);
+
+              var breakElement = document.createElement('br'); // Create a line break element
+              container.appendChild(breakElement); // Add the line break after the video element
             }
           });
 
