--- a/index.html
+++ b/index.html
@@ -136,14 +136,13 @@
           .then(response => response.json())
           .then(videos => {
             // Générer la liste de vidéos
-            for (var i = 0; i < videos.length; i++) {
-              var video = videos[i];
+            videos.forEach(video => {
               var videoWrapper = document.createElement('div'); // Create a wrapper div
 
               var videoElement = document.createElement('div');
               videoElement.textContent = video.title;
               videoElement.style.cursor = 'pointer';
-              videoElement.style.display = 'inline-block';
+              videoElement.style.display = 'none'; // Hide initially
               videoElement.style.marginBottom = '5px'; // Add a small space below each video title
               videoElement.onclick = createOnClickHandler(video.url);
 
@@ -154,7 +153,10 @@
 
               var container = document.getElementById('videoList');
               container.appendChild(videoWrapper); // Add the wrapper to the container
-            }
+            });
+
+            // Afficher toutes les vidéos initialement
+            showAllVideos();
           });
 
         function createOnClickHandler(url) {
@@ -202,6 +204,16 @@
                 }
             }
         });
+
+        // Fonction pour afficher toutes les vidéos
+        function showAllVideos() {
+          var videosContainer = document.getElementById('videoList');
+          var videoWrappers = videosContainer.getElementsByTagName('div');
+
+          for (var i = 0; i < videoWrappers.length; i++) {
+            videoWrappers[i].style.display = 'block';
+          }
+        }
     </script>
 </body>
 </html>
