--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         body {
             margin: 0;
             overflow: hidden;
-            background: #2e2e2e;
+            background: #2e2e2e; /* Modification de la couleur de fond */
         }
         #canvas {
             position: fixed;
@@ -28,11 +28,11 @@
             padding: 10px;
             border: 1px solid #888;
             width: 50%;
-            height: auto;
-            max-height: 90vh;
+            height: auto; /* Modification de cette ligne */
+            max-height: 90vh; /* Ajout de cette ligne */
             border-radius: 10px;
             box-shadow: 10px 10px 5px grey;
-            overflow: hidden;
+            overflow: hidden; /* Ajout de cette ligne */
         }
         #videoPlayer {
             width: 100%;
