--- a/index.html
+++ b/index.html
@@ -72,9 +72,19 @@
             font-weight: bold;
             cursor: pointer;
         }
+        #canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none; /* Empêche le canvas d'interférer avec les interactions de la souris sur les autres éléments */
+            z-index: -1; /* Assure que le canvas est positionné en arrière-plan */
+        }
     </style>
 </head>
 <body>
+    <canvas id="canvas"></canvas>
     <div id="header">
         <!-- Mettez ici votre image -->
         <h1>Vidéothèque</h1>
@@ -89,17 +99,16 @@
     </div>
 
     <script>
-        var canvas = document.createElement('canvas');
+        var canvas = document.getElementById('canvas');
         var ctx = canvas.getContext('2d');
 
-        var stars = []; 
-        var numStars = 300; 
+        var stars = [];
+        var numStars = 300;
         var maxDistance = 100;
         var mousePos = {x: 0, y: 0};
 
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
-        document.body.appendChild(canvas);
 
         for(var i = 0; i < numStars; i++) {
             var x = Math.random() * canvas.width;
