--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             background-color: rgba(0, 0, 0, 0.5);
             border-radius: 5px;
             cursor: pointer;
+            text-align: center; /* Centrer le texte */
         }
         .videoContainer:hover {
             background-color: rgba(255, 255, 255, 0.1);
@@ -37,6 +38,7 @@
             border-radius: 5px;
             background-color: rgba(255, 255, 255, 0.1);
             color: #fff;
+            text-align: center; /* Centrer le texte */
         }
         #modal {
             display: none;
